#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(pub/index.php)
AC_PREFIX_DEFAULT(/usr/local/icinga-web)

# Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Define install options
AC_ARG_WITH(icinga_user,--with-web-user=<user> sets user name to run icinga,web_user=$withval,web_user=www-data)
AC_ARG_WITH(web_group,--with-web-group=<grp> sets group name to run icinga,web_grp=$withval,web_grp=www-data)
AC_SUBST(web_user)
AC_SUBST(web_grp)
AC_DEFINE_UNQUOTED(DEFAULT_web_user,"$web_user")
AC_DEFINE_UNQUOTED(DEFAULT_web_group,"$web_grp")
INSTALL_OPTS="-o $web_user -g $web_grp"
AC_SUBST(INSTALL_OPTS)

CFLAGS=""
AC_SUBST(CFLAGS)

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
